fix: fit table width on mobile devices
Although google chrome inspector show fitted table on mobile device
iphone itself shows a much to wide table. Safari inspector did show
that too. I had to inherit table width on mobile devices to fit.

--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
   body {
     font-size: 3vmin;
   }
+
+  table {
+    width: inherit !important;
+  }
 }
 
 /* iPhone landscape only */
@@ -19,12 +23,20 @@ body {
   body {
     font-size: 4vmin;
   }
+
+  table {
+    width: inherit !important;
+  }
 }
 
 /* iPhone portait only */
 @media (max-width: 320px) {
   body {
     font-size: 4vmin;
+  }
+
+  table {
+    width: inherit !important;
   }
 }
 
